# Vector-Computing-Machine

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  VCM
HEAD/: assembler.h  cpu.h  gui.h  hardware.h  shell.h  util.h
SRC/: assembler.c  cpu.c  gpu.c  gui.c  init.c  main.c  mem.c  shell.c
TESTASM/: bintest.pasm  jmptest.pasm
TESTBIN/: bintest.pasm  jmptest
include/: cpu.h  gpu.h  gui.h  hardware.h  mem.h  shell.h
test/asm/: bintest.pasm  labeltest.pasm
